# joule-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/sglang_plugin/: hook_example.py
examples/vllm_sidecar/: Dockerfile.sampler  docker-compose.yml  hook_example.py
joule_agent/: __init__.py  exporter.py  sampler.py  schema.py
joule_agent/integrations/: __init__.py  generic.py  sglang.py  triton.py  vllm.py
tests/: test_schema.py
